--- a/examples/Investigate_Flowers102.ipynb
+++ b/examples/Investigate_Flowers102.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bb586111",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "493f418a",
    "metadata": {},
    "outputs": [],
@@ -38,14 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "cbd9fb72",
    "metadata": {},
    "outputs": [],
    "source": [
     "dataset_splits = []\n",
-    "for split in ['train', 'val', 'test']:\n",
-    "    dataset_splits.append(datasets.Flowers102(root='./tmp', download=True, split=split))\n",
+    "for split in [\"train\", \"val\", \"test\"]:\n",
+    "    dataset_splits.append(datasets.Flowers102(root=\"./tmp\", download=True, split=split))\n",
     "dataset = torch.utils.data.ConcatDataset(dataset_splits)"
    ]
   },
@@ -53,32 +53,8 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9f7d6306",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Will run the code on one GPU.\n",
-      "STARTUP | distributed init (rank 0): env://\n",
-      "Running on: cuda\n",
-      "Run directory of model: /home/fabian/Documents/_git/GitHub/digital-dermatology/SelfClean/examples/DINO-ConcatDataset-chewy-jamb\n",
-      "Data loaded: there are 8189 train images, 512 batches, and a batch size of 16.\n",
-      "Single GPU detected, model will run on single instance.\n",
-      "Single GPU detected, model will run on single instance.\n",
-      "Student and Teacher are built: they are both vit_tiny network.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 2, Train loss: 7.862462, Train stud/teach acc: 0.1875:   1%|█▌                                                                                                                                                      | 1/100 [08:31<8:50:55, 321.77s/it]"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "selfclean = SelfClean(\n",
     "    auto_cleaning=True,\n",
@@ -97,7 +73,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93f90d6f",
+   "id": "b355f2c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: plot dups, irr, lbls individually"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "527efd4c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -118,8 +104,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
