started with renaming

--- a/examples/Investigate_OxfordIIITPet.ipynb
+++ b/examples/Investigate_OxfordIIITPet.ipynb
@@ -438,7 +438,7 @@
    ],
    "source": [
     "print(f\"Automatic `near duplicates` detected: {len(issues.get_issues('near_duplicates')['auto_issues'])}\")\n",
-    "print(f\"Automatic `irrelevant samples` detected: {len(issues.get_issues('irrelevants')['auto_issues'])}\")\n",
+    "print(f\"Automatic `off-topic samples` detected: {len(issues.get_issues('off_topic_samples')['auto_issues'])}\")\n",
     "print(f\"Automatic `label errors` detected: {len(issues.get_issues('label_errors')['auto_issues'])}\")"
    ]
   },
@@ -663,7 +663,7 @@
    "id": "2620b687",
    "metadata": {},
    "source": [
-    "### Irrelevant Samples"
+    "### Off-Topic Samples"
    ]
   },
   {
@@ -688,7 +688,7 @@
     "fig, axes = plt.subplots(3, 5, figsize=(10, 7))\n",
     "for h_ax in axes:\n",
     "    for ax in h_ax:\n",
-    "        idx = issues.get_issues('irrelevants')['indices'][r_index]\n",
+    "        idx = issues.get_issues('off_topic_samples')['indices'][r_index]\n",
     "        ax.imshow(dataset[idx][0])\n",
     "        ax.set_title(f\"Ranking: {r_index+1}, Idx: {idx}\")\n",
     "        ax.set_xticks([])\n",
@@ -806,8 +806,8 @@
     }
    ],
    "source": [
-    "df_irrelevants = issues.get_issues(\"irrelevants\", return_as_df=True)\n",
-    "df_irrelevants.head()"
+    "df_off_topic_samples = issues.get_issues(\"off_topic_samples\", return_as_df=True)\n",
+    "df_off_topic_samples.head()"
    ]
   },
   {
